--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogmv-babysteps",
+  "name": "blogmv-react",
   "version": "0.0.1",
   "ignore": [
     "**/.*",
@@ -7,10 +7,10 @@
     "bower_components"
   ],
   "dependencies": {
-    "backbone": "1.x",
-    "underscore": "1.x",
-    "jquery": "2.x",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "react": "~0.12.1",
+    "pubsub-js": "~1.5.0",
+    "qwest": "~1.4.0"
   },
   "license": "MIT"
 }
